Inyectar SqlConnection. [master]

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings" : {
+    "DefaultConnection" : "Server=localhost,1433; Database=Northwind; User ID=sa; Password=J1z01234_; Encrypt=False;"
+  },
   "AllowedHosts": "*"
 }
