--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings" : {
     "DefaultConnection" : "Server=localhost,1433; Database=Northwind; User ID=sa; Password=J1z01234_; Encrypt=False;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer" : "http://localhost:5241",
+    "Audience" : "http://localhost:5241",
+    "Key":"M0ZDM0Y2N0U0RTU5RjY3RDk1MzhCQzYy",
+    "TokenValidityMins" : 30
+  }
 }
